# mod-swapper

./: .gitignore  README.md  app_settings.py  constants.py  file_actions.py  main.py  poc_file_swap.py  profile.py  profile_state.py  pyproject.toml  test_discover_steam.py  test_load_profile.py  test_poc_file_swap.py  test_profile_swap.py  test_save_to_profile.py  user_settings.py
.circleci/: config.yml
.github/workflows/: ci.yaml  tests.yml
config/: logging_setup.py  profile_state.py  user_settings.py
functions/: discover_gog.md  discover_steam.py  file_actions.py  file_hash_cache.py  hashed_store_ops.py
scratch/: delete_dialog.py  path-copy-test.py  powershell_sandbox.ps1  scratch_discover_steam.py  scratch_load_profile.py  scratch_profile_swap.py  scratch_sandbox.py  scratch_save_to_profile.py  scratch_walk.py
test/: poc_file_swap.py  test_profile_swap.py
tests/: test_file_hash_cache.py  test_hashed_store_ops.py
ui/: app.py  delete_dialog.py  overwrite_dialog.py  settings.py  theme.json  ui_fuctions.py  wrapping_label.py
